simplified pregen options
- reduce to 3 options
- fixed nullpointer on estimated bounds